--- a/css/styles.css
+++ b/css/styles.css
@@ -289,7 +289,7 @@ body{
   #menuToggle input:checked ~ span {
     opacity: 1;
     transform: rotate(45deg) translate(-2px, -1px);
-    background: #232323;
+    background: #fff;
   }
 
   #menuToggle input:checked ~ span:nth-last-child(3) {
@@ -304,9 +304,9 @@ body{
   #menu_burger {
     position: absolute;
     width: 100%;
-    margin: -20px;
+    margin: -50px -20px;
     padding: 20px;
-    padding-top: 75px;
+    padding-top: 50px;
     background: #000;
     list-style-type: none;
     -webkit-font-smoothing: antialiased;
