--- a/css/styles.css
+++ b/css/styles.css
@@ -5,6 +5,7 @@
    height: 100%;
    margin: 0px;
    padding: 0px;
+   background-color: #000;
  }
 
 body,div,dl,dt,dd,ul,ol,li,h1,h2,h3,h4,h5,h6,pre,
@@ -196,7 +197,7 @@ body{
     display: block;
   }
 
-  #menuToggle {
+  .mobile_menu {
     display: none;
   }
 
@@ -240,11 +241,16 @@ body{
     /* Hamburger Menu
      * --------------------------------------- */
 
+   .mobile_menu {
+     display: block;
+     height: 60px;
+     width: 100%;
+     padding: 20px;
+     height: 60px;
+   }
+
   #menuToggle {
-    display: block;
     position: relative;
-    top: 20px;
-    left: 20px;
     z-index: 100000000000;
     -webkit-user-select: none;
     user-select: none;
@@ -270,11 +276,11 @@ body{
     margin-bottom: 5px;
     position: relative;
     background: #fff;
-    border-radius: 3px;
+    border-radius: 0px;
     z-index: 10000000000000;
     transform-origin: 4px 0px;
-    transition: transform 0.5s cubic-bezier(0.77,0.2,0.05,1.0),
-                background 0.5s cubic-bezier(0.77,0.2,0.05,1.0),
+    transition: transform 0.2s cubic-bezier(0.77,0.2,0.05,1.0),
+                background 0.2s cubic-bezier(0.77,0.2,0.05,1.0),
                 opacity 0.55s ease;
   }
 
@@ -303,7 +309,7 @@ body{
 
   #menu_burger {
     position: absolute;
-    width: 100%;
+    width: 50%;
     margin: -50px -20px;
     padding: 20px;
     padding-top: 50px;
