--- a/css/subpages.css
+++ b/css/subpages.css
@@ -202,15 +202,20 @@
   background-image: url(../images/history_quiz_6.png);
 }
 
+.interveiw_subpages {background-color: #000;}
 
-.interview_banner_cybele {
-  background: url(../images/Cybele_Banner.png) no-repeat left center;
+.interview_image {
   float:left;
   width: 100%;
   height: 0;
   margin-top: 50px;
   padding-top: 66.3%;
   background-color: #1E1E1E;
+
+}
+
+.interview_banner_cybele {
+  background: url(../images/Cybele_Banner.png) no-repeat left center;
   -webkit-background-size: cover;
   -moz-background-size: cover;
   -o-background-size: cover;
@@ -219,12 +224,6 @@
 
 .interview_banner_barbara {
   background: url(../images/Barbara_Banner.png) no-repeat left center;
-  float:left;
-  width: 100%;
-  height: 0;
-  margin-top: 50px;
-  padding-top: 66.3%;
-  background-color: #1E1E1E;
   -webkit-background-size: cover;
   -moz-background-size: cover;
   -o-background-size: cover;
@@ -233,12 +232,6 @@
 
 .interview_banner_lees {
   background: url(../images/Lees_Banner.png) no-repeat left center;
-  float:left;
-  width: 100%;
-  height: 0;
-  margin-top: 50px;
-  padding-top: 66.3%;
-  background-color: #1E1E1E;
   -webkit-background-size: cover;
   -moz-background-size: cover;
   -o-background-size: cover;
@@ -262,7 +255,7 @@
 
 }
 
-@media only screen and (max-width: 645px) {
+@media only screen and (max-width: 576px) {
 
   .history_intro_title {
     top: 0%;
@@ -277,10 +270,25 @@
     width: 100%;
   }
 
+  .interview_image {
+    margin-top: 0px;
+    padding-top: 45%;
+  }
+
+  .history_intro_1 {
+    padding-top: 35%;
+  }
+
+  .history_intro_title {
+    position: absolute;
+    top: 10%;
+    left: 5%;
+  }
+
 
 }
 
-@media (min-width: 646px) and (max-width: 1000px) {
+@media (min-width: 577px) and (max-width: 1000px) {
 
   .history_intro_title {
     top: 15%;
@@ -298,8 +306,10 @@
 
 }
 
-@media (min-width: 767px) and (max-width: 1200px) {
+@media only screen and (min-width: 1200px) {
 
-
+  .interview_image {
+    padding-top: 35%;
+  }
 
 }
