--- a/css/styles.css
+++ b/css/styles.css
@@ -16,6 +16,15 @@ form,fieldset,input,textarea,p,blockquote,th,td {
 
 a {
 	text-decoration:none;
+	color: #ff7800;
+}
+
+a:hover {
+  color: #fff;
+}
+
+a.button {
+	text-decoration:none;
   border: solid 1px #fff;
 	padding: 10px 20px;
 	font-weight: bold;
@@ -26,12 +35,10 @@ a {
 	color: #fff;
 	font-size: 15px;
   letter-spacing: 1px;
-  text-decoration: none;
 }
 
-a:hover {
-  color: #ff7800;
-  text-decoration: none;
+a:hover.button {
+	color: #ff7800;
 }
 
 table {
