--- a/css/subpages.css
+++ b/css/subpages.css
@@ -1,3 +1,9 @@
+.basic_subpage {
+  padding-top: 10%;
+  width: 50%;
+  margin: 0px auto;
+  text-align: center;
+}
 
 .history_bg {
   background-color: #000;
@@ -341,6 +347,10 @@
     left: 5%;
   }
 
+  .basic_subpage {
+    width: 90%;
+  }
+
 
 }
 
@@ -361,6 +371,10 @@
 
   .visitor {
     width: 50%;
+  }
+
+  .basic_subpage {
+    width: 70%;
   }
 
 
