--- a/css/thumbnail_image_left_carousel.css
+++ b/css/thumbnail_image_left_carousel.css
@@ -100,6 +100,11 @@
 	font-weight: bold;
 	width: 150px;
 	text-align: center;
+  color: #fff;
+}
+
+.thumbnail_image_left_carousel_caption a:hover {
+  color: #ff7800;
 }
 
 /*------------------------------------------------------*/
