--- a/css/subpages.css
+++ b/css/subpages.css
@@ -231,7 +231,7 @@
   width: 100%;
   height: 0;
   margin-top: 50px;
-  padding-top: 66.3%;
+  padding-top: 35%;
   background-color: #1E1E1E;
 
 }
@@ -286,6 +286,14 @@
 
 .interview_banner_paige {
   background: url(../images/Paige_Banner.png) no-repeat left center;
+  -webkit-background-size: cover;
+  -moz-background-size: cover;
+  -o-background-size: cover;
+  background-size: cover;
+}
+
+.interview_banner_jimmy {
+  background: url(../images/Jimmy_Banner.png) no-repeat left center;
   -webkit-background-size: cover;
   -moz-background-size: cover;
   -o-background-size: cover;
