--- a/css/main_new.css
+++ b/css/main_new.css
@@ -7,7 +7,7 @@
 		position: relative;
 		min-height: 100%;
 		width: 100%;
-		overflow: hidden;
+		clear: both;
 }
 
 
@@ -22,89 +22,106 @@
 
 .logo img {margin-top: 20%;}
 
-.bg_top_1,
-.bg_top_2,
-.bg_top_3,
-.bg_top_4 {
-  background-repeat: no-repeat;
-  width: 100%;
-  height: 100%;
-  position: absolute;
-  top: 0;
-  left: 0;
-  background-size: cover;
+.home_overlay {z-index: 10;}
+
+.bg_animation {
+	z-index: -100;
 }
 
 .bg_top_1 {
   background-image: url(../images/top_left_1.png);
   animation: hideshow 2.1s 1.5s ease infinite;
+	background-repeat: no-repeat;
+  width: 100%;
+  height: 100%;
+	background-size: cover;
+	position: absolute;
+  top: 0;
+  left: 0;
 }
 
 .bg_top_2 {
   background-image: url(../images/top_left_2.png);
   animation: hideshow 2.1s 1.7s ease infinite;
+	background-repeat: no-repeat;
+  width: 100%;
+  height: 100%;
+	background-size: cover;
+	position: absolute;
+  top: 0;
+  left: 0;
 }
 
 .bg_top_3 {
   background-image: url(../images/top_left_3.png);
   animation: hideshow 2.1s 1.9s ease infinite;
+	background-repeat: no-repeat;
+  width: 100%;
+  height: 100%;
+	background-size: cover;
+	position: absolute;
+  top: 0;
+  left: 0;
 }
 
 .bg_top_4 {
   background-image: url(../images/top_left_4.png);
   animation: hideshow 2.1s 2.1s ease infinite;
-}
-
-.bg_bottom_1,
-.bg_bottom_2,
-.bg_bottom_3,
-.bg_bottom_4,
-.bg_bottom_5,
-.bg_bottom_6,
-.bg_bottom_7 {
-  background-repeat: no-repeat;
+	background-repeat: no-repeat;
   width: 100%;
   height: 100%;
-  position: absolute;
-  bottom: 0;
-  right: 0;
-  background-size: cover;
-	z-index: -111;
+	background-size: cover;
+	position: absolute;
+  top: 0;
+  left: 0;
 }
 
 .bg_bottom_1 {
   background-image: url(../images/bottom_right_1.png);
   animation: hideshow 3s 1.5s ease infinite;
+	background-repeat: no-repeat;
+  width: 100%;
+  height: 100%;
+	background-size: cover;
+	position: absolute;
+  top: 0;
+  right: 0;
 }
 
 .bg_bottom_2 {
   background-image: url(../images/bottom_right_2.png);
   animation: hideshow 3s 1.7s ease infinite;
+	background-repeat: no-repeat;
+  width: 100%;
+  height: 100%;
+	background-size: cover;
+	position: absolute;
+  top: 0;
+  right: 0;
 }
 
 .bg_bottom_3 {
   background-image: url(../images/bottom_right_1.png);
   animation: hideshow 3s 1.9s ease infinite;
+	background-repeat: no-repeat;
+  width: 100%;
+  height: 100%;
+	background-size: cover;
+	position: absolute;
+  top: 0;
+  right: 0;
 }
 
 .bg_bottom_4 {
   background-image: url(../images/bottom_right_3.png);
   animation: hideshow 3s 2.1s ease infinite;
-}
-
-.bg_bottom_5 {
-  background-image: url(../images/bottom_right_4.png);
-  animation: hideshow 3s 2.3s ease infinite;
-}
-
-.bg_bottom_6 {
-  background-image: url(../images/bottom_right_1.png);
-  animation: hideshow 3s 2.5s ease infinite;
-}
-
-.bg_bottom_7 {
-  background-image: url(../images/bottom_right_5.png);
-  animation: hideshow 3s 2.7s ease infinite;
+	background-repeat: no-repeat;
+  width: 100%;
+  height: 100%;
+	background-size: cover;
+	position: absolute;
+  top: 0;
+  right: 0;
 }
 
 .stories {}
@@ -125,12 +142,13 @@
 
 .share {}
 
-.share .intro {
+.share_intro {
   text-align: center;
   width: 30%;
   margin: 0px auto;
 	padding-top: 10%;
-	z-index: 1000000;
+	z-index: 10;
+	position: relative;
 }
 
   /*------------------------------------------------------*/
@@ -166,15 +184,17 @@
 	}
 
 	.past_intro {
+		text-align: center;
 		width: 80%;
 		margin: 0px auto;
-		text-align: center;
+		padding: 100px 0px;
 	}
 
-	.share .intro {
+	.share_intro {
 		text-align: center;
 		width: 80%;
 		margin: 0px auto;
+		padding: 100px 0px;
 	}
 
 	.page {
@@ -195,7 +215,7 @@
 		background-color: #000;
 	}
 
-	.share .intro {
+	.share_intro {
 		text-align: center;
 		width: 400px;
 		margin: 0px auto;
