--- a/css/thumbnail_image_left_carousel_new.css
+++ b/css/thumbnail_image_left_carousel_new.css
@@ -73,6 +73,7 @@
   top: 150px;
   text-align: left;
   text-shadow: none;
+  z-index: 10;
 }
 .thumbnail_image_left_carousel_caption h1{
   font-size: 35px;
