--- a/css/subpages.css
+++ b/css/subpages.css
@@ -309,6 +309,14 @@
   background-size: cover;
 }
 
+.interview_banner_alan {
+  background: url(../images/Alan_Banner.png) no-repeat left center;
+  -webkit-background-size: cover;
+  -moz-background-size: cover;
+  -o-background-size: cover;
+  background-size: cover;
+}
+
 @media only screen and (orientation: portrait) {
 
   .interview_wrapper {
